fixed lint errors/warnings